# madara-bench

./: .gitignore  Makefile  README.md  flake.nix  madara-bench.service  pyproject.toml  taplo.toml
app/: __init__.py  deps.py  error.py  graph.py  logging.py  rpc.py  stats.py  system.py
app/benchmarks/: __init__.py  generators.py
app/database/: __init__.py  models.py
app/models/: __init__.py  body.py  models.py  query.py
db/: compose.yaml
fgw/: compose.yaml  fgw-runner.sh
juno/: Dockerfile  compose.yaml  juno-runner.sh
madara/: Dockerfile  compose.yaml  default.nix  madara-runner.sh
pathfinder/: Dockerfile  compose.yaml  pathfinder-runner.sh
