[tool.poetry]
  authors = ["Trantorian"]
  description = "Starknet node benchmarking utility"
  license = "MIT"
  name = "madara-bench"
  package-mode = false
  readme = "README.md"
  version = "0.1.0"

[tool.poetry.dependencies]
  docker = "^7.1.0"
  fastapi = { extras = ["standard"], version = "^0.114.0" }
  python = ">=3.12,<3.13"
  requests = "^2.32.3"
  starknet-py = "^0.24.1"

[tool.ruff]
  fix = true
  line-length = 80

[tool.ruff.format]
  docstring-code-format = true
  docstring-code-line-length = 60

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]
